--- a/src/pages/item-lookup/item-lookup.html
+++ b/src/pages/item-lookup/item-lookup.html
@@ -27,16 +27,17 @@
     </ion-item>
 
     <ng-template #listItem let-attrs="attrs">
-        <span [innerHTML]="attrs.data.InventoryID.value | boldprefix:attrs.keyword"></span>
+        <span [innerHTML]="attrs.data.InventoryID.value | boldprefix:attrs.keyword"></span><br/>
+        <small *ngIf="attrs.data.AlternateID" [innerHTML]="attrs.data.AlternateID | boldprefix:attrs.keyword"></small>
     </ng-template>
     <!--<ion-item>-->
-    <ion-auto-complete [dataProvider]="itemAutocompleteService" [template]="listItem"
+    <ion-auto-complete [(ngModel)]="selectedItem" [dataProvider]="itemAutocompleteService" [template]="listItem"
                        (itemSelected)="loadItemLocations($event)"></ion-auto-complete>
     <!--</ion-item>-->
     <ion-scroll style="height: calc(100% - 100px);" scrollY="true">
         <ion-list>
-            <ion-item *ngFor="let location of itemLocations" (click)="itemTapped($event)">
-                <ion-label>{{location.InventoryID.value}}</ion-label>
+            <ion-item *ngFor="let location of itemLocations" (click)="openDetailsModal($event, location)">
+                <ion-label>{{location.LocationID.value}}</ion-label>
                 <div class="item-note" item-end style="width: 120px;">
                     <ion-row>
                         <ion-col col-8>Available: </ion-col>
@@ -50,4 +51,5 @@
             </ion-item>
         </ion-list>
     </ion-scroll>
+    <barcode-listener (scan)='onBarcodeScan($event)'></barcode-listener>
 </ion-content>
