--- a/src/pages/setup/setup.html
+++ b/src/pages/setup/setup.html
@@ -21,4 +21,5 @@
     <button ion-button (click)="scanBarcode()">
         Scan Config Barcode
     </button>
+    <barcode-listener (scan)='onBarcodeScan($event)'></barcode-listener>
 </ion-content>
