--- a/src/pages/item-lookup/item-lookup.html
+++ b/src/pages/item-lookup/item-lookup.html
@@ -36,7 +36,7 @@
     <!--</ion-item>-->
     <ion-scroll style="height: calc(100% - 100px);" scrollY="true">
         <ion-list>
-            <ion-item *ngFor="let location of itemLocations" (click)="openDetailsModal($event, location)">
+            <ion-item tappable *ngFor="let location of itemLocations" (click)="openDetailsModal($event, location)">
                 <ion-label>{{location.LocationID.value}}</ion-label>
                 <div class="item-note" item-end style="width: 120px;">
                     <ion-row>
