Added transfer pages and other various changes.

--- a/src/pages/item-lookup-details/item-lookup-details.html
+++ b/src/pages/item-lookup-details/item-lookup-details.html
@@ -26,11 +26,11 @@
     </tr>
     <tr>
       <td>Warehouse: </td>
-      <td>{{data.WarehouseID.value}}</td>
+      <td>{{data.Warehouse.value}}</td>
     </tr>
     <tr>
       <td>Location: </td>
-      <td>{{data.LocationID.value}}</td>
+      <td>{{data.Location.value}}</td>
     </tr>
     <tr>
       <td>Qty On-Hand: </td>
