--- a/src/pages/item-lookup/item-lookup.html
+++ b/src/pages/item-lookup/item-lookup.html
@@ -31,13 +31,13 @@
         <small *ngIf="attrs.data.AlternateID" [innerHTML]="attrs.data.AlternateID | boldprefix:attrs.keyword"></small>
     </ng-template>
     <!--<ion-item>-->
-    <ion-auto-complete [(ngModel)]="selectedItem" [dataProvider]="itemAutocompleteService" [template]="listItem"
+    <ion-auto-complete id="item-select" [(ngModel)]="selectedItem" [dataProvider]="itemAutocompleteService" [template]="listItem"
                        (itemSelected)="loadItemLocations($event)"></ion-auto-complete>
     <!--</ion-item>-->
     <ion-scroll style="height: calc(100% - 100px);" scrollY="true">
         <ion-list>
             <ion-item tappable *ngFor="let location of itemLocations" (click)="openDetailsModal($event, location)">
-                <ion-label>{{location.LocationID.value}}</ion-label>
+                <ion-label>{{location.Location.value}}</ion-label>
                 <div class="item-note" item-end style="width: 120px;">
                     <ion-row>
                         <ion-col col-8>Available: </ion-col>
