Completed transfer entry/saving logic and various other tweaks.

--- a/src/pages/bin-transfer/tabs/enter.html
+++ b/src/pages/bin-transfer/tabs/enter.html
@@ -66,7 +66,7 @@
                 <button type="button" ion-button (click)="nextFromBin()">Next</button>
             </div>
             <div class="col">
-                <button type="button" ion-button (click)="commitTransfer()">Commit Transfers</button>
+                <button type="button" ion-button (click)="commitTransfers()">Commit Transfers</button>
             </div>
         </div>
     </ion-toolbar>
