--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,28 +4,31 @@
             <ion-icon name="menu"></ion-icon>
         </button>
         <ion-title>
-            Login
+            Login to AcuShip
         </ion-title>
     </ion-navbar>
 </ion-header>
 <ion-content padding id="page5">
     <form id="login-form1">
+        <div *ngIf="message != null">
+            <strong>{{message}}</strong>
+        </div>
         <ion-list id="login-list3">
             <ion-item id="login-input1">
                 <ion-label>
                     Username
                 </ion-label>
-                <ion-input type="text" placeholder=""></ion-input>
+                <ion-input type="text" placeholder="" [(ngModel)]="username"></ion-input>
             </ion-item>
             <ion-item id="login-input2">
                 <ion-label>
                     Password
                 </ion-label>
-                <ion-input type="password" placeholder=""></ion-input>
+                <ion-input type="password" placeholder="" [(ngModel)]="password"></ion-input>
             </ion-item>
         </ion-list>
         <div class="spacer" style="height:40px;" id="login-spacer1"></div>
-        <button id="login-button1" ion-button color="stable" block>
+        <button id="login-button1" ion-button color="stable" block (click)="login();">
             Log in
         </button>
     </form>
