--- a/src/pages/pick-shipments-pick/tabs/pick.html
+++ b/src/pages/pick-shipments-pick/tabs/pick.html
@@ -14,10 +14,10 @@
 
 
 <ion-content padding style="position: relative;">
-    <div>
-        <h5 style="text-align: center;">{{getCurrentItem()?.InventoryID?.value}}</h5>
-        <h6 style="text-align: center;">{{getCurrentItem()?.Description?.value}}</h6>
-        <h6 style="text-align: center;">Picked {{getCurrentItemPickedQty()}} of {{getCurrentItem()?.ShippedQty?.value}}</h6>
+    <div *ngIf="getSuggestedItem() != null">
+        <h5 style="text-align: center;">{{getSuggestedItem()?.InventoryID?.value}}</h5>
+        <h6 style="text-align: center;">{{getSuggestedItem()?.Description?.value}}</h6>
+        <h6 style="text-align: center;">Picked {{getCurrentItemPickedQty()}} of {{getSuggestedItem()?.ShippedQty?.value}}</h6>
     </div>
 
     <ion-grid>
@@ -25,7 +25,7 @@
             <ion-col>
                 <ion-item no-margin no-padding>
                     <ion-label color="primary" stacked>Bin:</ion-label>
-                    <ion-input [ngModel]="getCurrentItemAllocation()?.LocationID?.value" readonly></ion-input>
+                    <ion-input [ngModel]="getSuggestedItem()?.LocationID?.value" readonly></ion-input>
                 </ion-item>
             </ion-col>
             <ion-col>
@@ -39,7 +39,7 @@
             <ion-col>
                 <ion-item no-margin no-padding>
                     <ion-label color="primary" stacked>SKU:</ion-label>
-                    <ion-input [ngModel]="getCurrentItem()?.InventoryID?.value" readonly></ion-input>
+                    <ion-input [ngModel]="getSuggestedItem()?.InventoryID?.value" readonly></ion-input>
                 </ion-item>
             </ion-col>
             <ion-col>
@@ -53,7 +53,7 @@
             <ion-col>
                 <ion-item>
                     <ion-label color="primary" stacked>Lot/Serial:</ion-label>
-                    <ion-input [ngModel]="getCurrentItemAllocation()?.LotSerialNbr?.value" readonly></ion-input>
+                    <ion-input [ngModel]="getSuggestedItem()?.LotSerialNbr?.value" readonly></ion-input>
                 </ion-item>
             </ion-col>
             <ion-col>
@@ -79,7 +79,9 @@
         </ion-row>
     </ion-grid>
 
-    <div class="fixed-outside">
+</ion-content>
+<ion-footer no-shadow>
+    <ion-toolbar position="bottom">
         <div class="row">
             <div class="col">
                 <button type="button" ion-button (click)="previousItem()"><ion-icon name="arrow-back"></ion-icon></button>
@@ -102,8 +104,8 @@
                 <button type="button" ion-button (click)="cancelPicks()">Cancel All</button>
             </div>
         </div>
-    </div>
-</ion-content>
+    </ion-toolbar>
+</ion-footer>
 
 
 
