--- a/src/pages/pick-shipments/pick-shipments.html
+++ b/src/pages/pick-shipments/pick-shipments.html
@@ -33,7 +33,7 @@
                     <label>Total Items:</label>
                 </ion-col>
                 <ion-col>
-                    {{totalItems}}
+                    {{pickProvider.totalQty}}
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -41,7 +41,7 @@
                     <label>Unpicked Items:</label>
                 </ion-col>
                 <ion-col>
-                    {{unpickedItems}}
+                    {{pickProvider.unpickedQty}}
                 </ion-col>
             </ion-row>
             <ion-row>
