--- a/src/pages/pick-shipments-pick/tabs/unpicked-list.html
+++ b/src/pages/pick-shipments-pick/tabs/unpicked-list.html
@@ -26,7 +26,7 @@
         <ion-row *ngFor="let item of loc.Items">
           <ion-col col-5>{{item.InventoryID.value}}</ion-col>
           <ion-col col-5>{{item.LotSerialNbr.value}}</ion-col>
-          <ion-col col-2>{{pickProvider.getPendingPickedQty(item)}}/{{item.RemainingQty}}</ion-col>
+          <ion-col col-2>{{pickProvider.getPendingAllocationQty(item.LineNbr.value, item.SplitLineNbr.value)}}/{{item.RemainingQty}}</ion-col>
         </ion-row>
       </div>
     </ion-item>
